--- a/Index.html
+++ b/Index.html
@@ -160,7 +160,7 @@
                   <p class="text-muted"> May. 기업부설연구소 설립</p>
                   <p class="text-muted"> Oct. 건설업등록 시설물유지관리업</p>
                   <p class="text-muted"> Oct. 대한시설물유지관리협회 가입</p>
-                  <p class="text-muted"> Nov. 서울지사 선립</p>
+                  <p class="text-muted"> Nov. 서울지사 설립</p>
                 </div>
               </div>
             </li>
