--- a/Index.html
+++ b/Index.html
@@ -98,7 +98,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto text-justify">
             <h5>안녕하십니까?<br><br>㈜디오티 대표이사 문대중 입니다.</h5>
-            <p class="large text-muted" style="line-height:2.3em">Doctor of Things, 인간의 건강관리를 위한 의사가 필요한 것 처럼 시설물의 유지관리를 위한 의사가 되고자 하는 ㈜디오티는 건설분야 전반에 걸쳐 노후화된 구조물의 점검을 통해 최소비용으로 생애주기를 극대화할 수 있는 유지관리방안의 제시 및 보수 · 보강공사를 수행하기 위해 시설물유지관리업을 등록한 회사로 면허 취득 전 구조물의 계측/점검 및 분석을 수행해왔던 해당 분야 전 Cycle에 걸쳐 공사 가능한 업체입니다. </p>
+            <p class="large text-muted" style="line-height:2.3em">인간의 건강관리를 위한 의사가 필요한 것 처럼 시설물의 유지관리를 위한 의사가 되고자 하는 ㈜디오티는 건설분야 전반에 걸쳐 노후화된 구조물의 점검을 통해 최소비용으로 생애주기를 극대화할 수 있는 유지관리방안의 제시 및 보수 · 보강공사를 수행하기 위해 시설물유지관리업을 등록한 회사로 면허 취득 전 구조물의 계측/점검 및 분석을 수행해왔던 해당 분야 전 Cycle에 걸쳐 공사 가능한 업체입니다. </p>
           </div>
         </div>
       </div>
