--- a/Index.html
+++ b/Index.html
@@ -91,7 +91,7 @@
           <div class="container">
             <div class="team-membermain">
               <img class="mx-auto rounded-circlee" src="img/team/main.jpg">
-              <h4>대표이사 문 대 중 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 대표이사 신 희 창</h4>
+              <h4>대표이사 문 대 중</h4>
             </div>
           </div>
         </div>
